# litenergy

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt  main.cpp
data/: cards.json
frontend/: index.html
